left: fix 'unread messages' timestamp in dark mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1505,6 +1505,9 @@ ac5 = var(--ac-5)
             /// Feat -> Input border radius.
             ._3uMse { rad: var(--r-inputs) i }
         }
+
+        /// Fix unread messages in dark mode. @upstream
+        /.dark ._8Uqu5 ._3dtfX .m61XR { c: var(--secondary-stronger) }
     }
 
     /// Feat -> Colors for replies and group members.
